# Codebase-archeologist

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
src/: __init__.py  config.py
src/agent/: __init__.py  tools.py  workflow.py
src/brain/: __init__.py  embeddings.py  graph_store.py  vector_store.py
src/ingestion/: __init__.py  extractor.py  parser.py  scanner.py
src/ui/: __init__.py  app.py  components.py
tests/: test_extractor.py  test_parser.py
tests/sample_codebase/: __init__.py  auth.py  models.py
